# togopackage

./: .dockerignore  .gitignore  .gitmodules  Makefile  README.md
.github/workflows/: build-container-image.yaml
data.example/: .gitignore  config.yaml
data.example/rdf-config/demo/: description.yaml  endpoint.yaml  model.yaml  prefix.yaml  sparql.yaml
data.example/sources/: demo.ttl
data.example/togomcp/mie/: demo.yaml
ingest/: Cargo.toml  README.md
ingest/src/: cli.rs  fs_utils.rs  main.rs  manifest.rs  model.rs  qlever.rs  state.rs  virtuoso.rs
packaging/: Caddyfile  Dockerfile
packaging/defaults/sparqlist/: triple_count.md
packaging/defaults/tabulae/layer1/: default.rq
packaging/runtime/run/: virtuoso.sh
packaging/runtime/setup/: grasp.sh  sparqlist.sh  tabulae.sh  togomcp.sh
packaging/runtime/support/: generate_sparqlist_from_rdf_config.rb  generate_tabulae_queries_from_rdf_config.rb  generate_virtuoso_load_sql.py  qlever_build_index.py  rdf_config_query_generator.rb  runtime_state.py  setup_qlever.py  setup_virtuoso.py  source_data.py  test_generate_virtuoso_load_sql.py  test_source_data.py  with_database_build_lock.py
supervisor/: Cargo.toml
supervisor/src/: config.rs  dashboard.rs  logging.rs  main.rs  runtime.rs
supervisor/src/services/: caddy.rs  grasp.rs  mod.rs  prepare_data.rs  qlever.rs  rdf_config_mcp.rs  sparql_proxy.rs  sparqlist.rs  tabulae.rs  togomcp.rs  virtuoso.rs
